# reqmap

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi.yml  test.yml
reqmap/: cli.py  dependency.py  project.py
